<resources>
    <string name="union">乐租联盟商</string>
    <string name="login">登录</string>
    <string name="start_work">开始工作</string>
    <string name="news_info">最新资讯</string>
    <string name="version">版本检测</string>
    <string name="introduce">平台介绍</string>
    <string name="helpInfo">账号注册</string>
    <string name="forgetPsd">忘记密码</string>
    <string name="workerSignIn">员工登录</string>
    <string name="changePhone">更换绑定手机</string>
    <string name="bossSignIn">Boss登录</string>
    <string name="psdHit">密码:</string>
    <string name="accountHit">账号:</string>
    <string name="performance">绩效</string>
    <string name="mission">任务</string>

    <string-array name="weeks">
        <item>第一周</item>
        <item>第二周</item>
        <item>第三周</item>
        <item>第四周</item>
    </string-array>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>
</resources>
