<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/homepage_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.cyf.union.MainActivity">

    <Button
        android:id="@+id/startWork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/homepage_btn1"
        android:text="@string/start_work"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/introduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/homepage_btn2"
        android:text="@string/introduce"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/newsInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/homepage_btn3"
        android:text="@string/news_info"
        android:textColor="@android:color/white" />

</LinearLayout>
